core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/ZVC__Zoom_Admin_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Zoom Admin Configuration</description>
    <label>Zoom Admin Configuration</label>
</CustomObject>