core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__Enable_Editable_Contact_Lead__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Enable_Editable_Contact_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Editable Contact/Lead</label>
    <type>Checkbox</type>
</CustomField>