core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__Enable_HVS__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Enable_HVS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable HVS</label>
    <type>Checkbox</type>
</CustomField>