core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__Env__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Env__c</fullName>
    <label>Env</label>
    <length>255</length>
    <type>Text</type>
</CustomField>