core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__HVS_Disposition_Field__c.field-meta.xml
<CustomField>
    <fullName>ZVC__HVS_Disposition_Field__c</fullName>
    <label>HVS Disposition Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>