core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__Ignore_Internal_Calls__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Ignore_Internal_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Internal Calls</label>
    <type>Checkbox</type>
</CustomField>