core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__LogAnsweredQueueCallLog__c.field-meta.xml
<CustomField>
    <fullName>ZVC__LogAnsweredQueueCallLog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LogAnsweredQueueCallLog</label>
    <type>Checkbox</type>
</CustomField>