core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__Phone_Auto_Save_Call_Logs__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Phone_Auto_Save_Call_Logs__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Phone Auto Save Call Logs</label>
    <type>Checkbox</type>
</CustomField>