core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__Phone_Auto_Save_SMS__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Phone_Auto_Save_SMS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Phone Auto Save SMS</label>
    <type>Checkbox</type>
</CustomField>