core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__Phone_Auto_Save_SMS_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Phone_Auto_Save_SMS_Call_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Auto Save SMS Call Log</label>
    <type>Checkbox</type>
</CustomField>