core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__Show_Picklist_By_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Show_Picklist_By_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Picklist By Record Type</label>
    <type>Checkbox</type>
</CustomField>