core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__Use_Salesforce_Username_Match_Zoom_Email__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Use_Salesforce_Username_Match_Zoom_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Salesforce Username  Match Zoom Emai</label>
    <type>Checkbox</type>
</CustomField>