core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZE_Add_Registrant_as_CM__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZE_Add_Registrant_as_CM__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ZE Add Registrant as CM</label>
    <type>Checkbox</type>
</CustomField>