core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZE_Create_new_Lead__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZE_Create_new_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ZE Create new Lead</label>
    <type>Checkbox</type>
</CustomField>