core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZE_Sync_CM_to_Zoom__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZE_Sync_CM_to_Zoom__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ZE Sync CM to Zoom</label>
    <type>Checkbox</type>
</CustomField>