core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZE_Sync_Poll_and_QA__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZE_Sync_Poll_and_QA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ZE Sync Poll and QA</label>
    <type>Checkbox</type>
</CustomField>