core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZE_Ticket_Type_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZE_Ticket_Type_Data_Source__c</fullName>
    <defaultValue>("Non-Selected")</defaultValue>
    <label>ZE Ticket Type Data Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>