core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZM_Add_Host_As_Guest__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZM_Add_Host_As_Guest__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ZM Add Host As Guest</label>
    <type>Checkbox</type>
</CustomField>