core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZM_Create_for_external_meeting__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZM_Create_for_external_meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create Events for Non salesforce Zoom Meetings for matching Contacts / Leads</description>
    <label>ZM Create for external meeting</label>
    <type>Checkbox</type>
</CustomField>