core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZM_Create_Zoom_Meeting_for_Non_SF_s__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZM_Create_Zoom_Meeting_for_Non_SF_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZM Create Zoom Meeting for Non SF's ZM</label>
    <type>Checkbox</type>
</CustomField>