core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZM_Disable_Invitation_Email__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZM_Disable_Invitation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Invitation Email</label>
    <type>Checkbox</type>
</CustomField>