core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZM_Enable_Non_PMI_Meeting_Passcode__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZM_Enable_Non_PMI_Meeting_Passcode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZM Enable Non-PMI Meeting Passcode</label>
    <type>Checkbox</type>
</CustomField>