core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZM_Mail_Default_From_Address__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZM_Mail_Default_From_Address__c</fullName>
    <description>ZM Mail Default From Address</description>
    <label>ZM Mail Default From Address</label>
    <type>TextArea</type>
</CustomField>