core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZM_Populate_Detail_Into_EventDescription__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZM_Populate_Detail_Into_EventDescription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZM Populate Detail Into EventDescription</label>
    <type>Checkbox</type>
</CustomField>