core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZoomPhoneCallLogConfigExt0__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZoomPhoneCallLogConfigExt0__c</fullName>
    <label>ZoomPhoneCallLogConfigExt0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>