core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZoomPhoneCallLogConfigExt1__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZoomPhoneCallLogConfigExt1__c</fullName>
    <label>ZoomPhoneCallLogConfigExt1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>