core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZoomPhoneCallLogConfigExt2__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZoomPhoneCallLogConfigExt2__c</fullName>
    <label>ZoomPhoneCallLogConfigExt2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>