core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZP_Hide_Note_Deletion_Button__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZP_Hide_Note_Deletion_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling this option provides users with visibility and control over the delete button in the Note interface.</description>
    <label>ZP Hide Note Deletion Button</label>
    <type>Checkbox</type>
</CustomField>