core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZP_Log_Cancelled_Calls__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZP_Log_Cancelled_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to log cancelled calls and automatically open the Notes page when a call ends. Disable to skip logging and skip opening of Notes page after cancellations.</description>
    <label>ZP Log Cancelled Calls</label>
    <type>Checkbox</type>
</CustomField>