core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZP_Show_Save_Button_When_Auto_Save__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZP_Show_Save_Button_When_Auto_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZP Show Save Button When Auto Save</label>
    <type>Checkbox</type>
</CustomField>