core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZW_Add_Registrants_as_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZW_Add_Registrants_as_Campaign_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically add Webinar registrants as Campaign members.</description>
    <inlineHelpText>Automatically add Webinar registrants as Campaign members.</inlineHelpText>
    <label>Add Registrants as Campaign Members</label>
    <type>Checkbox</type>
</CustomField>