core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZW_Create_Campaign_for_each_Webinar__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZW_Create_Campaign_for_each_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically create a Salesforce Campaign for each new Webinar</description>
    <inlineHelpText>Automatically create a Salesforce Campaign for each new Webinar</inlineHelpText>
    <label>Create Campaign for each Webinar</label>
    <type>Checkbox</type>
</CustomField>