core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZW_Create_new_Lead__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZW_Create_new_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically create new Leads for Non-Salesforce registrants(Can't match with any Contact/Lead by Email).</description>
    <inlineHelpText>Automatically create new Leads for Non-Salesforce registrants(Can't match with any Contact/Lead by Email).</inlineHelpText>
    <label>Create new Lead</label>
    <type>Checkbox</type>
</CustomField>