core/unpackaged/main/default/objects/ZVC__Zoom_Admin_Configuration__c/fields/ZVC__ZW_Sync_Registrant_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>ZVC__ZW_Sync_Registrant_Page_Size__c</fullName>
    <label>ZW Sync Registrant Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>